# task-oriented-dialogue

./: .pre-commit-config.yaml  pyproject.toml
src/gtod/: sgd.py  util.py
src/gtod/common/: dialog_pb2.py  schema.py  system_summary.py
src/gtod/datasets/generation/: prepare_dataset.py  ser.py  t5_tasks.py
src/gtod/datasets/generation/utterance_templates/: templates_sanity_test.py
src/gtod/datasets/state_tracking/: abstract_dst.py
src/gtod/datasets/state_tracking/d3st/: common.py  create_multiwoz21_trade_schemaless_data.py  create_multiwoz21_trade_schemaless_data_test.py  create_multiwoz_schemaless_data.py  create_multiwoz_schemaless_data_test.py  create_sgd_schemaless_data.py  (+1 more)
src/gtod/eval/schema_guided_dst/: evaluate.py  metrics.py  metrics_test.py  schema.py
src/gtod/eval/sgd/: evaluate.py  evaluate.sh
src/gtod/generation/: utterance_generator.py
src/gtod/state_tracking/: conftest.py
src/gtod/state_tracking/d3st/: README.md  common.py  create_multiwoz21_trade_schemaless_data.py  create_multiwoz21_trade_schemaless_data_test.py  create_multiwoz_schemaless_data.py  create_multiwoz_schemaless_data_test.py  create_sgd_schemaless_data.py  create_sgd_schemaless_data_test.py
src/gtod/state_tracking/show_dont_tell/: common.py  convert_sgd_t5x_sdt_preds_to_dstc8.py  convert_sgd_t5x_sdt_preds_to_dstc8_test.py  create_multiwoz_sdt_data.py  create_multiwoz_sdt_data_test.py  create_sgd_sdt_data.py  create_sgd_sdt_data_test.py  sdt_prompts.py  sdt_utils.py
src/gtod/state_tracking/utils/: multiwoz_utils.py  sgd_utils.py  text_to_text_utils.py
(+19 files in other folders)
